--- a/style.css
+++ b/style.css
@@ -1,5 +1,33 @@
 body {
-  width: 100%;
+  width: 800px;
   height: 100%;
   margin: 0;
+}
+header h1{
+  margin: auto;
+  text-align: center;
+}
+div {
+  margin: auto;
+}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+figcaption {
+  font-size: medium;
+  text-align: center;
+}
+nav {
+  margin: auto;
+  text-align: center;
+  background-color: grey;
+  padding: 10px;
+}
+#featured-property {
+width: 800px;
+text-align: center;
+padding: 10px;
 }
